[gd_scene load_steps=8 format=3 uid="uid://deob1b2sgrafu"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ysmyi"]
[ext_resource type="Texture2D" uid="uid://dcdf2e1bkmkh7" path="res://assets/images/background/green1.png" id="2_kjqq8"]
[ext_resource type="PackedScene" uid="uid://bto2uwkcee1bu" path="res://scenes/player.tscn" id="3_c8uir"]
[ext_resource type="PackedScene" uid="uid://wljcdsrx0cxg" path="res://scenes/paused_menu.tscn" id="4_slenh"]
[ext_resource type="PackedScene" uid="uid://c0ij7jwvcow3y" path="res://scenes/portal.tscn" id="6_oiyuk"]

[sub_resource type="SystemFont" id="SystemFont_cbach"]
font_names = PackedStringArray("OCR A")
subpixel_positioning = 0

[sub_resource type="Curve2D" id="Curve2D_13fsq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -37, -78, 0, 0, 0, 0, 1190, -89, 0, 0, 0, 0, 1184, 727, 0, 0, 0, 0, -38, 724, 0, 0, 0, 0, -37, -78)
}
point_count = 5

[node name="Game" type="Node2D"]
process_mode = 1
script = ExtResource("1_ysmyi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -12

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kjqq8")
expand_mode = 1

[node name="Player" parent="." instance=ExtResource("3_c8uir")]
position = Vector2(574, 314)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PausedMenu" parent="CanvasLayer2" instance=ExtResource("4_slenh")]
unique_name_in_owner = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.298039, 0.298039, 0.298039, 0.713726)

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_cbach")
theme_override_font_sizes/font_size = 90
text = "GAME OVER"

[node name="Portal" parent="." instance=ExtResource("6_oiyuk")]
unique_name_in_owner = true
visible = false
position = Vector2(579, 37)
collision_mask = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_13fsq")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-37, -78)
rotation = -0.00896471

[node name="Mob_timer" type="Timer" parent="."]
wait_time = 0.439
autostart = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Mob_timer" to="." method="_on_mob_timer_timeout"]
